// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headline should render correctly 1`] = `
<DocumentFragment>
  <h3
    class="is-centered c-type--h3 headline"
  >
    Headline Children
  </h3>
</DocumentFragment>
`;

exports[`Headline should render correctly with defaults 1`] = `
<DocumentFragment>
  <h1
    class="is-centered c-type--h1"
  >
    Headline Children
  </h1>
</DocumentFragment>
`;
